<resources>
    <string name="app_name">BikeRentalApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bike Rental</string>
    <string name="nav_header_subtitle">subtitle goes here</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="reserve_bike">Reserve Bike</string>
    <string name="find_bikes">Find Bikes</string>
    <string name="add_bike">Add Bikes</string>
    <string name="report_bike">Report Bike</string>
    <string name="return_bike">Return Bike</string>
    <string name="rent_bike">Rent Bike</string>
    <string name="title_activity_maps">Map</string>
    <string name="login">login</string>
    <string name="password">Password</string>
    <string name="not_a_member"><u>Not a Member?</u></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="studentCardNum">Student card number</string>
    <string name="title_activity_bike_locator">BikeLocator</string>
</resources>
